# conference-agent

./: .gitignore  .gitleaks.toml  CLAUDE.md  DEPLOY.md  Makefile  README.md  TAXONOMY.md  pyproject.toml
.githooks/: README.md  pre-commit
.github/workflows/: auto_check.yml  ci.yml  monthly_update.yml  weekly_update.yml
conference_agent/: __init__.py  calendar_sync.py  cli.py  config.py  database.py  discover.py  models.py  notify.py  refresh.py
data/: conferences.db
deploy/vercel/: README.md  deploy.sh  vercel.json
infra/: samconfig.toml  template.yaml
infra/.aws-sam/: build.toml
scripts/: build_static.py  build_table.py  daily_update.py  deploy.sh  ingest_records.py  push_db.py  scheduled_discovery.sh  sync_calendar.py
tests/: test_calendar_ics.py  test_calendar_sync.py  test_cli_add.py  test_database.py  test_discover.py  test_ga_injection.py  test_models.py  test_nl_query.py  test_refresh.py  test_search_parity.py
tests/js/: run_search.js
web/: app.py  handler.py  nl_query.py  refresh_handler.py  requirements-refresh.txt  requirements.txt  search.py
web/static/: calendar.js  index.html  nl_query.js  search.js
