[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conference_agent"
version = "0.1.0"
description = "AI agent that compiles academic/professional conferences into a table and syncs them with Google Calendar"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joseph Rich" }]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "SQLAlchemy>=2.0",
    "anthropic>=0.40",
    "python-dateutil>=2.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
# Conference discovery agent (LLM tool-use + web search). The core `anthropic`
# client is a base dependency; extras here cover optional fetch/parse helpers.
discover = ["requests>=2.31", "beautifulsoup4>=4.12"]
# Google Calendar sync.
calendar = [
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]
# Web table interface (boolean search + per-row calendar sync).
web = ["fastapi>=0.110", "uvicorn>=0.27"]
# AWS Lambda deployment: ASGI adapter + a pure-Python PostgreSQL driver. pg8000
# ships no compiled extension, so `sam build` produces a Lambda-compatible
# package on any platform without Docker. (See web/requirements.txt.)
deploy = ["mangum>=0.17", "pg8000>=1.30"]
# PostgreSQL driver for loading/querying a managed database from your laptop
# (e.g. seeding RDS). psycopg has the best local ergonomics; use a
# `postgresql+psycopg://` URL with it, or `postgresql+pg8000://` with `deploy`.
postgres = ["psycopg[binary]>=3.1"]
notebooks = ["jupyter>=1.0", "ipykernel>=6.0"]
dev = ["pytest>=7.0", "ruff>=0.4", "bandit>=1.7"]

[project.scripts]
conference-agent = "conference_agent.cli:main"
conf-build-table = "scripts.build_table:main"
conf-sync-calendar = "scripts.sync_calendar:main"
conf-daily-update = "scripts.daily_update:main"

[tool.setuptools]
packages = ["conference_agent", "web"]

# Ship the static SPA assets with the `web` package so they are present in the
# Lambda artifact (FileResponse / StaticFiles resolve them relative to the package).
[tool.setuptools.package-data]
web = ["static/*"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require network access (excluded from CI by default)",
    "llm: tests that call the Anthropic API (excluded from CI by default)",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
